--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ $RECYCLE.BIN/
 postgres_dev/
 logfile
 
+
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
@@ -41,4 +42,4 @@ venv/
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
 
-set_env.sh
+*set_env.sh
